# resea

2026_3_3_19.16/: .secure_azone  .secure_xml  buildinfo.gpdsc  configuration.xml  mdk_demo.uvguix.frieren  mdk_demo.uvoptx  mdk_demo.uvprojx  ra_cfg.txt
2026_3_3_19.16/Listings/: mdk_demo.map
2026_3_3_19.16/Objects/: bms_app.d  bms_protect.d  bms_utils.d  bq76920_reg.d  bsp_bq76920_i2c.d  bsp_clocks.d  bsp_common.d  bsp_delay.d  bsp_group_irq.d  bsp_guard.d  bsp_iic_eeprom.d  bsp_io.d  bsp_irq.d  bsp_register_protection.d  bsp_rom_registers.d  bsp_sbrk.d  bsp_security.d  bsp_wifi.d  circular_queue.d  common_data.d  fsp_uart.d  hal_data.d  hal_entry.d  main.d  mdk_demo.build_log.htm  mdk_demo.htm  mdk_demo.lnp  mdk_demo.rpd  mdk_demo_Target 1.dep  pin_data.d  r_icu.d  r_ioport.d  r_sci_i2c.d  r_sci_uart.d  startup.d  system.d  vector_data.d
2026_3_3_19.16/bms/: BMS_APP.c  BMS_APP.h
2026_3_3_19.16/main/: BQ76920_REG.c  BQ76920_REG.h  BSP_BQ76920_I2C.c  BSP_BQ76920_I2C.h  BSP_IIC_EEPROM.h  BSP_WIFI.c  BSP_WIFI.h  FSP_UART.c
2026_3_3_19.16/ra_gen/: common_data.c  common_data.h  pin_data.c  vector_data.c  vector_data.h
2026_3_3_19.16/src/: hal_entry.c
Temple/0302_mdk_demo/: .secure_azone  .secure_xml  configuration.xml  mdk_demo.uvguix.frieren  mdk_demo.uvoptx  ra_cfg.txt
Temple/0501_led/: .secure_azone  .secure_xml  buildinfo.gpdsc  configuration.xml  led.uvguix.frieren  led.uvoptx  led.uvprojx  ra_cfg.txt
freertos_main/: .clangd  .secure_azone  .secure_xml  buildinfo.gpdsc  configuration.xml  freertos.cbuild-idx.yml  freertos.cbuild-pack.yml  freertos.cproject.yml  freertos.csolution.yml  freertos.uvguix.frieren  freertos.uvoptx  freertos.uvprojx  ra_cfg.txt
freertos_main/Listings/: freertos.map
freertos_main/Objects/: bsp_clocks.d  bsp_common.d  bsp_delay.d  bsp_group_irq.d  bsp_guard.d  bsp_i2c_ee_thr.d  bsp_i2c_ee_thr_entry.d  bsp_i2c_eeprom_thread.d  bsp_i2c_eeprom_thread_entry.d  bsp_iic_eeprom.d  bsp_io.d  bsp_irq.d  bsp_register_protection.d  bsp_rom_registers.d  bsp_sbrk.d  bsp_security.d  common_data.d  drv_gpio.d  drv_uart.d  event_groups.d  freertos.axf  freertos.build_log.htm  freertos.htm  freertos.lnp  freertos.rpd  freertos.sbd  freertos_Target 1.dep  hal_data.d  hal_entry.d  heap_4.d  led_thread.d  led_thread_entry.d  list.d  log_thread.d  log_thread_entry.d  main.d  new_thread0.d  pin_data.d  port.d  queue.d  (+9 more)
freertos_main/applications/: app.h
freertos_main/drivers/: drv_gpio.h  drv_uart.c  drv_uart.h
freertos_main/main/: BSP_IIC_EEPROM.c  BSP_IIC_EEPROM.h
freertos_main/ra_gen/: BSP_I2C_EE_Thr.c  BSP_I2C_EE_Thr.h  hal_data.h  led_thread.c  log_thread.c  log_thread.h  main.c  pin_data.c  vector_data.c  vector_data.h
freertos_main/src/: BSP_I2C_EE_Thr_entry.c  hal_entry.c  led_thread_entry.c  log_thread_entry.c
freertos_main/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
freertos_main/tmp/freertos+Target_1/: CMakeLists.txt  components.cmake  groups.cmake
freertos_main/tmp/freertos+Target_1/src/freertos+Target_1-stamp/: freertos+Target_1-configure-.cmake  freertos+Target_1-database-.cmake  freertos+Target_1-source_dirinfo.txt
freertos_main/tmp/freertos+Target_1/tmp/: freertos+Target_1-cfgcmd.txt  freertos+Target_1-mkdirs.cmake
freertos_temple/: .secure_azone  .secure_xml  buildinfo.gpdsc  configuration.xml  freertos.uvguix.frieren  freertos.uvguix.weidongshan  freertos.uvoptx  freertos.uvprojx  ra_cfg.txt
freertos_temple/Listings/: freertos.map
freertos_temple/Objects/: bsp_clocks.d  bsp_common.d  bsp_delay.d  bsp_group_irq.d  bsp_guard.d  bsp_io.d  bsp_irq.d  bsp_register_protection.d  bsp_rom_registers.d  bsp_sbrk.d  bsp_security.d  common_data.d  drv_gpio.d  drv_uart.d  event_groups.d  freertos.axf  freertos.build_log.htm  freertos.htm  freertos.lnp  freertos.rpd  freertos.sbd  freertos_Target 1.dep  hal_data.d  hal_entry.d  heap_4.d  led_thread.d  led_thread_entry.d  list.d  log_thread.d  log_thread_entry.d  main.d  pin_data.d  port.d  queue.d  r_ioport.d  r_sci_uart.d  startup.d  stream_buffer.d  system.d  tasks.d  (+2 more)
freertos_temple/drivers/: drv_gpio.c
freertos_temple/ra_gen/: hal_data.c  led_thread.c  led_thread.h  main.c  pin_data.c  vector_data.h
freertos_temple/src/: led_thread_entry.c  log_thread_entry.c
main_project/: mdk_demo.uvguix.frieren  mdk_demo.uvoptx  mdk_demo.uvprojx
main_project/Listings/: mdk_demo.map
main_project/Objects/: bsp_clocks.d  bsp_common.d  bsp_delay.d  bsp_group_irq.d  bsp_guard.d  bsp_io.d  bsp_irq.d  bsp_register_protection.d  bsp_rom_registers.d  bsp_sbrk.d  bsp_security.d  bsp_wifi.d  common_data.d  hal_data.d  hal_entry.d  main.d  mdk_demo.axf  mdk_demo.build_log.htm  mdk_demo.htm  mdk_demo.sbd  mdk_demo_Target 1.dep  pin_data.d  r_ioport.d  r_sci_i2c.d  r_sci_uart.d  startup.d  system.d  vector_data.d
main_project/main/: BQ76920_REG.h  BSP_BQ76920_I2C.c  BSP_WIFI.c  BSP_WIFI.h  FSP_UART.c  FSP_UART.h
main_project/ra_gen/: vector_data.c
main_project/src/: hal_entry.c
new_RA_project/: configuration.xml  mdk_demo.uvguix.frieren  mdk_demo.uvprojx  ra_cfg.txt  rasc_version.txt
new_RA_project/Listings/: mdk_demo.map
new_RA_project/Objects/: bms_analysis.d  bms_global.d  bq76920_reg.d  bsp_clocks.d  bsp_common.d  bsp_delay.d  bsp_group_irq.d  bsp_guard.d  main.d  (+21 more)
test/: .secure_xml  buildinfo.gpdsc  configuration.xml  mdk_demo.uvguix.frieren  mdk_demo.uvoptx  mdk_demo.uvprojx  ra_cfg.txt
使用vscode可以编写的main_temple/: .clangd  .secure_azone  .secure_xml  buildinfo.gpdsc  mdk_demo.cbuild-idx.yml  mdk_demo.cbuild-idx.yml.uvgui.frieren  mdk_demo.cproject.yml  mdk_demo.csolution.yml  mdk_demo.uvguix.frieren  mdk_demo.uvoptx
使用vscode可以编写的main_temple/tmp/mdk_demo+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
使用vscode可以编写的main_temple/tmp/mdk_demo+Target_1/src/mdk_demo+Target_1-stamp/: mdk_demo+Target_1-configure-.cmake  mdk_demo+Target_1-database-.cmake  mdk_demo+Target_1-source_dirinfo.txt
使用vscode可以编写的main_temple/tmp/mdk_demo+Target_1/tmp/: mdk_demo+Target_1-cfgcmd.txt  mdk_demo+Target_1-mkdirs.cmake
(+154 files in other folders)
